# Shopr

./: .flaskenv  .gitignore  app.db  config.py  pyproject.toml  shoppr.py
app/: __init__.py  models.py
app/api/: __init__.py  errors.py  routes.py
migrations/versions/: 79c7f3a90dd1_initial.py
